# objpoke

./: Cargo.toml
objpoke/: Cargo.toml
objpoke-cli/: Cargo.toml
objpoke-cli/src/: main.rs
objpoke/src/: elf.rs
objpoke/src/elf/: reloc.rs  symtab.rs
src/: elf.rs  main.rs
src/elf/: reloc.rs  symtab.rs
