[package]
name = "objpoke"
version = "0.1.0"
authors = ["tux3 <barrdetwix@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tux3/objpoke/"
categories = ["command-line-utilities", "development-tools::build-utils"]
description = "Minimal in-place objcopy replacement"

[dependencies]
goblin = "0.3"
eyre = "0.6.3"
scroll = "0.10"
structopt = "0.3"
regex = "1.3.9"
