[package]
name = "objpoke"
version = "0.3.0"
authors = ["tux3 <barrdetwix@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tux3/objpoke/"
categories = ["command-line-utilities", "development-tools::build-utils"]
description = "Minimal in-place objcopy replacement"

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
goblin = "=0.4.1"
scroll = "0.10"
structopt = "0.3"
regex = "1.3.9"
